--- a/_includes/head.html
+++ b/_includes/head.html
@@ -43,17 +43,32 @@
                         <a href="index.html#home">Home</a>
                     </li>
                     <li class="page-scroll">
-                        <a itemprop="url" href="marketplace.html">Products</a>
+                        <a itemprop="url" href="/marketplace.html">Products</a>
                     </li>
                     <li class="page-scroll">
                         <ul class="nav navbar-nav navbar-right">
 				          <li class="dropdown" style="background-color: transparent">
 				          	<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="background-color: transparent">Partners <b class="caret"></b></a>
 				          	<ul class="dropdown-menu">
-				          		<li><a href="become-partner.html" target="_blank">Become a Partner</a></li>
-				                <li><a href="development-environment.html" target="_blank" >Development Environment</a></li>
-				                <li><a href="solution-composer.html" target="_blank">Solution Composer</a></li>
-				                <li><a href="seller-dashboard.html" target="_blank">Seller Dashboard</a></li>
+				          		<li><a href="/become-partner.html" target="_blank">Become a Partner</a></li>
+				                <li><a href="/become-developer.html" target="_blank" >Join as a Developer</a></li>
+				                <li><a href="/become-vendor.html" target="_blank">Join as a Vendor</a></li>
+				                <li><a href="/become-seller.html" target="_blank">Join as a Sales Representative</a></li>
+				              </ul>
+				          </li>
+				        </ul>
+                    </li>
+                    
+                    <li class="page-scroll">
+                        <ul class="nav navbar-nav navbar-right">
+				          <li class="dropdown" style="background-color: transparent">
+				          	<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="background-color: transparent">Tools <b class="caret"></b></a>
+				          	<ul class="dropdown-menu">
+				                <li><a href="/tools-development-environment.html" target="_blank">Development Environment</a></li>
+				                <li><a href="/tools-component-registry.html" target="_blank">Component Registry</a></li>
+				                <li><a href="/tools-solution-composer.html" target="_blank">Solution Composer</a></li>
+				                <li><a href="/tools-seller-dashboard.html" target="_blank">Seller Dashboard</a></li>
+				                <li><a href="/tools-collaboration-board.html" target="_blank">Collaboration Board</a></li>
 				              </ul>
 				          </li>
 				        </ul>
