--- a/_layouts/industry.html
+++ b/_layouts/industry.html
@@ -6,10 +6,10 @@
 	</ol>
     <div class="container">
       	<div class="row">
-      		<div class="col-lg-3">
+      		<div class="col-lg-3 col-md-3">
       			<img src="/img/industries/{{page.industry}}.jpg" class="img-thumbnail">
       		</div>
-      		<div class="col-lg-9">
+      		<div class="col-lg-9 col-md-9">
     			<h1>{{page.title}}</h1>
 				<h3>Applications developed by our business network</h3>
 			</div>
