--- a/_includes/foot.html
+++ b/_includes/foot.html
@@ -3,71 +3,46 @@
                 <div class="row">
                     <div class="col-lg-12">
                         <div class="row">
-					        <div class="col-lg-3 heading-lead page-scroll">
+					        <div class="col-lg-4 heading-lead page-scroll">
 								<hr class="section-heading-spacer">
 				                <div class="clearfix"></div>
 					            <h4>Partners</h4>
 					            <ul>
-					                <li><a href="overview.html" target="_blank" >Overview</a></li>
-					                <li><a href="become-seller.html" target="_blank" >Become a Sales Representative</a></li>
-					                <li><a href="become-vendor.html" target="_blank" >Become a Solution Vendor</a></li>
-					                <li><a href="become-developer.html" target="_blank" >Join as a Developer</a></li>
+					                <li><a href="/overview.html" target="_blank" >Overview</a></li>
+					                <li><a href="/become-seller.html" target="_blank" >Become a Sales Representative</a></li>
+					                <li><a href="/become-vendor.html" target="_blank" >Become a Solution Vendor</a></li>
+					                <li><a href="/become-developer.html" target="_blank" >Join as a Developer</a></li>
+					                <li><a href="mailto:office.promart.io@gmail.com">office.promart.io@gmail.com</a></li>
 					            </ul>
 					        </div>
-					        <div class="col-lg-3 heading-lead">
+					        <div class="col-lg-4 heading-lead">
 								<hr class="section-heading-spacer">
 				                <div class="clearfix"></div>
 					            <h4>Legal</h4>
 					            <ul>
-					            	<li><a href="legal-privacy-policy.html">Privacy Policy</a></li>
-					            	<li><a href="legal-participation-agreement.html">Participation Agreement</a></li>
-									<li><a href="legal-vendor-terms.html">Terms of Use</a></li>
-									<li><a href="legal-ecommunications-policy.html">e-Communications Policy</a></li>
+					            	<li><a href="/legal-privacy-policy.html">Privacy Policy</a></li>
+					            	<li><a href="/legal-participation-agreement.html">Participation Agreement</a></li>
+									<li><a href="/legal-vendor-terms.html">Terms of Use</a></li>
+									<li><a href="/legal-ecommunications-policy.html">e-Communications Policy</a></li>
 									<li><a href="//www.sap.com/corporate/en/legal/copyright.html">Copyright Agent</a></li>
 									<li><a href="//www.sap.com/corporate/en/legal/trademark.html">Trademark</a></li>
 									<li><a href="//www.eclipse.org/legal/epl-2.0/">Eclipse Public License</a></li>
 								</ul>
 					        </div>
-					        <div class="col-lg-3 heading-lead">
-								<hr class="section-heading-spacer">
-				                <div class="clearfix"></div>
-					            <h4>Documentation</h4>
-					            <ul>
-					                <li><a href="http://help.dirigible.io" target="_blank" >Help</a></li>
-					                <li><a href="http://api.dirigible.io" target="_blank" >API</a></li>
-					                <li><a href="http://samples.dirigible.io" target="_blank" >Samples</a></li>
-					                <li><a href="{{ site.url }}/blogs.html" target="_blank" >Tutorials</a></li>
-					            </ul>
-					        </div>
-					        <div class="col-lg-3 heading-lead">
+					        <div class="col-lg-4 heading-lead">
 								<hr class="section-heading-spacer">
 					            <div class="clearfix"></div>
 						        	<h4>Community</h4>
 									<ul>
 						                <li><a href="{{ site.url }}/news.html" target="_blank">Newsletter</a></li>
 						                <li><a href="{{ site.url }}/blogs.html" target="_blank">Blogs</a></li>
-						                <li><a href="https://www.eclipse.org/forums/index.php?t=thread&frm_id=311" target="_blank">Forum</a></li>
-						                <li><a href="https://wiki.eclipse.org/Dirigible" target="_blank">Wiki</a></li>
-						                <li><a href="https://bugs.eclipse.org/bugs/buglist.cgi?list_id=12470461&product=Dirigible&query_format=advanced" target="_blank">Bugzilla</a></li>
-						                <li><a href="https://dev.eclipse.org/mailman/listinfo/dirigible-dev" target="_blank">Mailing List</a></li>
+						                <li><a href="https://github.com/promart-io/operations-forum/issues" target="_blank">Forum</a></li>
+						                <li><a href="https://github.com/promart-io/operations-wiki/wiki" target="_blank">Wiki</a></li>
 						            </ul>
 						        </div>
 						    </div>
 						    <div class="col-lg-12">
-			                    <ul class="list-inline banner-social-buttons">
-			                        <li><a href="https://twitter.com/dirigible_io" target="_blank" class="btn btn-primary btn-lg"><i class="fa fa-twitter fa-fw"></i></a>
-			                        </li>
-			                        <li><a href="https://github.com/eclipse/dirigible" target="_blank" class="btn btn-primary btn-lg"><i class="fa fa-github fa-fw"></i></a>
-			                        </li>
-			                        <li><a href="https://plus.google.com/u/0/111171361109860650442/posts" target="_blank" class="btn btn-primary btn-lg"><i class="fa fa-google-plus fa-fw"></i></a>
-			                        </li>
-			                        <li><a href="https://www.youtube.com/channel/UCYnsiVQ0M9iQLqP5DXCLMBA/videos" target="_blank" class="btn btn-primary btn-lg"><i class="fa fa-youtube fa-fw"></i></a>
-			                        </li>
-									<li><a href="https://www.facebook.com/dirigible.io" target="_blank" class="btn btn-primary btn-lg"><i class="fa fa-facebook fa-fw"></i></a>
-			                        </li>
-									<li><a href="https://www.linkedin.com/groups/8413366" target="_blank" class="btn btn-primary btn-lg"><i class="fa fa-linkedin fa-fw"></i></a>
-			                        </li>
-			                    </ul>
+			                    
 			                    <p class="copyright text-muted small">Copyright &copy; 2018 ProMART by SAP. All Rights Reserved. SAP is a registered trademark of the SAP SE.</p>
 			                </div>	    
                     </div>
