--- a/_includes/head.html
+++ b/_includes/head.html
@@ -91,31 +91,10 @@
 				          <li class="dropdown" style="background-color: transparent">
 				          	<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="background-color: transparent">Community <b class="caret"></b></a>
 				          	<ul class="dropdown-menu">
-				                <li><a href="https://www.youtube.com/channel/UCYnsiVQ0M9iQLqP5DXCLMBA/videos" target="_blank" >Videos</a></li>
-				                <li><a href="{{ site.url }}/news.html" target="_blank">Newsletter</a></li>
-				                <li><a href="{{ site.url }}/blogs.html" target="_blank">Blogs</a></li>
-				                <li><a href="https://www.eclipse.org/forums/index.php?t=thread&frm_id=311" target="_blank">Forum</a></li>
-				                <li><a href="https://wiki.eclipse.org/Dirigible" target="_blank">Wiki</a></li>
-				                <li><a href="https://bugs.eclipse.org/bugs/buglist.cgi?list_id=12470461&product=Dirigible&query_format=advanced" target="_blank">Bugzilla</a></li>
-				                <li><a href="https://dev.eclipse.org/mailman/listinfo/dirigible-dev" target="_blank">Mailing List</a></li>
-				                <li><a href="https://twitter.com/dirigible_io" target="_blank">Twitter</a></li>
-				                <li><a href="https://plus.google.com/u/0/111171361109860650442/posts" target="_blank">Google+</a></li>
-				                <li><a href="https://www.facebook.com/dirigible.io/" target="_blank">Facebook</a></li>
-				                <li><a href="https://www.linkedin.com/groups/8413366/" target="_blank">Linkedin</a></li>
-				              </ul>
-				          </li>
-				        </ul>
-				    </li>
-
-					<li class="page-scroll">
-				        <ul class="nav navbar-nav navbar-right">
-				          <li class="dropdown" style="background-color: transparent">
-				          	<a href="#" class="dropdown-toggle" data-toggle="dropdown" style="background-color: transparent">Documentation <b class="caret"></b></a>
-				          	<ul class="dropdown-menu">
-				                <li><a href="{{ site.url }}/help/index.html" target="_blank" >Help</a></li>
-				                <li><a href="{{ site.url }}/api/index.html" target="_blank" >API</a></li>
-				                <li><a href="{{ site.url }}/samples/index.html" target="_blank" >Samples</a></li>
-				                <li><a href="{{ site.url }}/blogs.html" target="_blank" >Tutorials</a></li>
+				                <li><a href="/news.html" target="_blank">Newsletter</a></li>
+				                <li><a href="/blogs.html" target="_blank">Blogs</a></li>
+				                <li><a href="https://github.com/promart-io/operations-forum/issues" target="_blank">Forum</a></li>
+				                <li><a href="https://github.com/promart-io/operations-wiki/wiki" target="_blank">Wiki</a></li>
 				              </ul>
 				          </li>
 				        </ul>
