--- a/css/creative.css
+++ b/css/creative.css
@@ -43,7 +43,9 @@ h6 {
   background-color: #212529 !important; }
 
 .text-faded {
-  color: rgba(255, 255, 255, 0.7); }
+  color: rgba(255, 255, 255, 0.7); 
+  font-size: 1.4em;
+}
 
 section {
   padding: 8rem 0; }
@@ -150,7 +152,7 @@ header.masthead {
     font-weight: 300; }
   @media (min-width: 768px) {
     header.masthead p {
-      font-size: 1.15rem; } }
+      font-size: 1.5rem; } }
   @media (min-width: 992px) {
     header.masthead {
       height: 100vh;
