--- a/_includes/head.html
+++ b/_includes/head.html
@@ -55,7 +55,7 @@
                         <a href="index.html#home">Home</a>
                     </li>
                     <li class="page-scroll">
-                        <a itemprop="url" href="/marketplace.html">Products</a>
+                        <a itemprop="url" href="/marketplace/">Products</a>
                     </li>
                     <li class="page-scroll">
                         <ul class="nav navbar-nav navbar-right">
