--- a/marketplace/views/marketplace/apps.html
+++ b/marketplace/views/marketplace/apps.html
@@ -49,10 +49,10 @@
 						<a ng-class="activeTab === 'allApps' ? 'nav-link active' : 'nav-link'" id="home-tab" data-toggle="tab" href="#/apps/" role="tab" aria-controls="home" aria-selected="true">All</a>
 					</li>
 					<li class="nav-item">
-						<a ng-class="activeTab === 'featuredApps' ? 'nav-link active' : 'nav-link'" id="profile-tab" data-toggle="tab" href="#/apps/featured/" role="tab" aria-controls="profile" aria-selected="false">Featured</a>
+						<a ng-class="activeTab === 'featuredApps' ? 'nav-link active' : 'nav-link'" id="profile-tab" data-toggle="tab" href="#/featured/" role="tab" aria-controls="profile" aria-selected="false">Featured</a>
 					</li>
 					<li class="nav-item">
-						<a ng-class="activeTab === 'recentApps' ? 'nav-link active' : 'nav-link'" id="contact-tab" data-toggle="tab" href="#/apps/recent/" role="tab" aria-controls="contact" aria-selected="false">Recent</a>
+						<a ng-class="activeTab === 'recentApps' ? 'nav-link active' : 'nav-link'" id="contact-tab" data-toggle="tab" href="#/recent/" role="tab" aria-controls="contact" aria-selected="false">Recent</a>
 					</li>
 				</ul>
 				<div class="tab-content" id="myTabContent">
