--- a/marketplace/views/marketplace/apps.html
+++ b/marketplace/views/marketplace/apps.html
@@ -5,7 +5,7 @@
 		</div>
 		<div class="col-md-3">
 			<select class="custom-select" style="width: 100%;" placeholder="Select Category">
-				<option selected="">All Categories</option>
+				<option selected="">-- All Categories --</option>
 				<option value="1">Asset Management</option>
 				<option value="2">Supplier Management</option>
 				<option value="3">Human Resources and Payroll</option>
@@ -13,7 +13,7 @@
 		</div>
 		<div class="col-md-3">
 			<select class="custom-select" style="width: 100%;" placeholder="Select Industry">
-				<option selected="">All Industries</option>
+				<option selected="">-- All Industries --</option>
 				<option value="1">Automotive</option>
 				<option value="2">Oil & Gas</option>
 				<option value="3">Finance</option>
